--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,27 @@
 #map{
 height: 100%;
 }
+
+main {
+    padding: 20px;
+}
+
+.flex-container {
+    display: flex;
+    border: none;
+}
+
+.flex-child {
+    flex: 1;
+}
+
+footer {
+    position:fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    color: #fff;
+    padding: 4px;
+}
