--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,16 +7,35 @@
     <title>{{title}}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/css/main_styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
+    {{#if logedin}}
+    <header>
+    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+        <ul>
+            <li><a class="btn" href="/events">Home</a></li>
+            <li><a class="btn" href="/events/add">Create Event</a></li>
+        </ul>
+    </nav>
+    </header>
+    {{/if}}
+<main>
+    {{{body}}}
+</main>
 
-<div id="map"></div>
-<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
-<script src="/public/js/map.js"></script>
+<footer>
+    CampusCompass: Made by Kavitha, Nikunj, Sanket, Priyank
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
