--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,10 @@ main {
     flex: 1;
 }
 
+.submit-button{
+    margin-top: 10px;
+}
+
 footer {
     position:fixed;
     left: 0;
@@ -24,4 +28,12 @@ footer {
     background-color: black;
     color: #fff;
     padding: 4px;
+}
+
+.error-login{
+    display: block;
+    background-color: crimson;
+    color: aliceblue;
+    padding: 5px;
+    font-weight: bold;
 }
