--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -3,18 +3,26 @@
     <div class="flex-child">
         <h2>Welcome</h2>
         <p>This is CampusCompass - an online site to help users notify of their current lectures and display all event occuring on campus</p>
-        <p>oergoibeorbi</p>
+        <p>Description for page</p>
     </div>
     <div class="flex-child">
         <div class="form-inner">
         <h2>Login</h2>
-        <form id="form-login" method="POST" action="">
+        <form action="/login" id="form-login" method="POST" >
             <label for="email">Email</label>
+            <br>
             <input class="form-input" id="email" name="login_email" type="email" placeholder="mystevens@stevens.edu"> 
+            <br>
             <label for="password">Email</label>
+            <br>
             <input class="form-input" id="password" name="login_password" type="password" placeholder="Password">
+            <br>
             <button class="submit-button" type="submit">Submit</button>
         </form>
+        <a href="/signup">New to Application, Click here to Register!</a>
         </div>
+        {{#if error_msg}}
+        <p class="error-login">{{error_msg}}</p>
+        {{/if}}
     </div>
 </div>
