--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -8,32 +8,43 @@
     </div>
     <div class="flex-child">
         <div class="form-inner">
-            <h2>Login</h2>
-            <form action="/signup" id="form-login" method="POST">
+            <h2>Signup</h2>
+            <form action="/signup" id="form-signup" method="POST">
+                <label for="username">Name</label>
+                <br>
+                <input class="form-input" id="user_name" name="user_name" type="text" placeholder="Name" value={{user_name}}>
+                <br>
                 <label for="email">Email</label>
                 <br>
-                <input class="form-input" id="email" name="user_email" type="email"
-                    placeholder="mystevens@stevens.edu">
+                <input class="form-input" id="user_email" name="user_email" type="email"
+                    placeholder="mystevens@stevens.edu" value={{user_email}}> 
                 <br>
                 <label for="password">Password</label>
                 <br>
-                <input class="form-input" id="password" name="user_password" type="password" placeholder="Password">
-                <br>
-                <label for="username">Name</label>
-                <br>
-                <input class="form-input" id="username" name="user_name" type="text" placeholder="Name">
+                <input class="form-input" id="user_password" name="user_password" type="password" placeholder="Password">
 
                 <br>
-                <label for="userdepartment">Department</label>
+                <label for="user_department">Department</label>
                 <br>
-                <input class="form-input" id="userdepartment" name="user_department" type="text" placeholder="Name">
+                <select name="user_department" id="user_department">
+                    <option value="#">---</option>
+                    <option value="saab">Saab</option>
+                    <option value="opel">Opel</option>
+                    <option value="audi">Audi</option>
+                </select>
 
                 <br>
-                <button class="submit-button" type="submit">Register</button>
+                <input type="submit" class="submit-button" value="Register"></input>
             </form>
+            <div class="error" id="error-form" hidden></div>
         </div>
         {{#if error_msg}}
-        <p class="error-login">{{error_msg}}</p>
+        <p class="error">{{error_msg}}</p>
+        {{/if}}
+
+        {{#if user_exist}}
+        <a href="/login"> Click Here to Login!</a>
         {{/if}}
     </div>
 </div>
+<script src="/public/js/signup.js"></script>
