--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,25 @@ main {
     padding: 20px;
 }
 
+nav {
+    background: #9E9E9E;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;  
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a:hover{
+    background: #BDBDBD;
+}
+
+
 .flex-container {
     display: flex;
     border: none;
