--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+    <nav>
         <ul>
             <li><a class="btn" href="/">Home</a></li>
             <li><a class="btn"href="/logout">logout</a></li>
