--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -5,7 +5,7 @@
         <p>This is CampusCompass - an online site to help users notify of their current lectures and display all event occuring on campus</p>
         <p>Description for page</p>
     </div>
-    <div class="flex-child">
+    <div class="flex-child center">
         <div class="form-inner">
 
         {{#if new_user_created}}
@@ -13,20 +13,23 @@
         {{/if}}
         <h2>Login</h2>
         <form action="/login" id="form-login" method="POST" >
-            <label for="email">Email</label>
+            <label for="login_email">Email</label>
             <br>
-            <input class="form-input" id="email" name="login_email" type="email" placeholder="mystevens@stevens.edu"> 
+            <input class="form-input" id="login_email" name="login_email" type="email" placeholder="mystevens@stevens.edu"> 
             <br>
-            <label for="password">Password</label>
+            <label for="login_password">Password</label>
             <br>
-            <input class="form-input" id="password" name="login_password" type="password" placeholder="Password">
+            <input class="form-input" id="login_password" name="login_password" type="password" placeholder="Password">
             <br>
             <button class="submit-button" type="submit">Submit</button>
         </form>
-        <a href="/signup">New to Application, Click here to Register!</a>
-        </div>
+        <div id="error-form" hidden></div>
         {{#if error_msg}}
         <p class="error">{{error_msg}}</p>
         {{/if}}
+        <a href="/signup">New to Application, Click here to Register!</a>
+        </div>
     </div>
 </div>
+
+<script src="/public/js/login.js"></script>
