--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -6,7 +6,7 @@
             occuring on campus</p>
         <p>Description for page</p>
     </div>
-    <div class="flex-child">
+    <div class="flex-child center">
         <div class="form-inner">
             <h2>Signup</h2>
             <form action="/signup" id="form-signup" method="POST">
@@ -36,12 +36,12 @@
                 <br>
                 <input type="submit" class="submit-button" value="Register"></input>
             </form>
-            <div class="error" id="error-form" hidden></div>
+            <div id="error-form" hidden></div>
+            {{#if error_msg}}
+            <p class="error">{{error_msg}}</p>
+            {{/if}}
+            <a href="/login">Already a User, Click here to Login!</a>
         </div>
-        {{#if error_msg}}
-        <p class="error">{{error_msg}}</p>
-        {{/if}}
-
         {{#if user_exist}}
         <a href="/login"> Click Here to Login!</a>
         {{/if}}
