Created locations handlebar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: black;
+    background-color: #A32638;
     color: #fff;
     padding: 4px;
 }
