--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -2,6 +2,7 @@
     <nav>
         <ul>
             <li><a class="btn" href="/">Home</a></li>
+            <li><a class="btn" href="/departments">Departments</a></li>
             <li><a class="btn"href="/logout">logout</a></li>
         </ul>
     </nav>
