--- a/views/pages/departments.handlebars
+++ b/views/pages/departments.handlebars
@@ -1,10 +1,15 @@
 <section>
-    <h1>Departments</h1>
-    <form action="/departments/search" method="POST" id="department-search">
-        <label for="search-bar">Search</label>
-        <input id="search-bar" type="search" name="department-search-term" placeholder="Please Enter Search term">
-        <button class="submit-button" type="submit">Submit</button>
-    </form>
-    <div id="department-results" hidden></div>
+  <h1>Departments</h1>
+  <form action="/departments/search" method="POST" id="department-search">
+    <label for="search-bar">Search</label>
+    <input
+      id="search-bar"
+      type="search"
+      name="department-search-term"
+      placeholder="Please Enter Search term"
+    />
+    <button class="submit-button" type="submit">Submit</button>
+  </form>
+  <div id="department-results" hidden></div>
 </section>
 <script src="/public/js/departments.js"></script>
