--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,10 +1,11 @@
 <header>
-    <nav>
-        <ul>
-            <li><a class="btn" href="/">Home</a></li>
-            <li><a class="btn" href="/departments">Departments</a></li>
-            <li><a class="btn"href="/locations">Locations</a></li>
-            <li><a class="btn"href="/logout">logout</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a class="btn" href="/">Home</a></li>
+      <li><a class="btn" href="/departments">Departments</a></li>
+      <li><a class="btn" href="/locations">Locations</a></li>
+      <li><a class="btn" href="/events">Events</a></li>
+      <li><a class="btn" href="/logout">logout</a></li>
+    </ul>
+  </nav>
 </header>
