--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,3 +104,40 @@ footer {
 #error-form {
   margin-top: 0.2em;
 }
+
+
+#pagination {
+    display: inline-block;
+    margin-top: 20px;
+}
+
+#pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+#pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
+.cards {
+    padding: 10px;
+    border-radius: 2px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+dt {
+  float: left;
+  clear: left;
+  width: 150px;
+}
+
+dd {
+  overflow: auto;
+  margin: 0 0 0 10px;
+  padding: 0 0 0.1em 0;
+}
