Added Landing Page

--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -1,1 +1,24 @@
-<p>Welcome to Portal</p>
+<div class="container">
+    <h1>Hey {{username}}!</h1>
+    <p>{{displayString}}</p>
+    {{#each events}}
+    <div class="cards">
+        <h2>{{name}}</h2>
+        <dl>
+            <dt>Type</dt>
+            <dd>{{type}}</dd>
+            <dt>Hours</dt>
+            <dd>{{hours}}</dd>
+            <dt>Location</dt>
+            <dd><a href="/locations/{{Location_details._id}}">{{Location_details.name}}</a></dd>
+            {{#if Location_details.rooms}}
+            <dt>Room Number</dt>
+            <dd>{{Location_details.rooms.room_number}}</dd>
+            <dt>Floor Number</dt>
+            <dd>{{Location_details.rooms.floor_number}}</dd>
+            {{/if}}
+        </dl>
+    </div>
+    {{/each}}
+</div>
+
