--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -8,7 +8,9 @@
             <dt>Type</dt>
             <dd>{{type}}</dd>
             <dt>Hours</dt>
-            <dd>{{hours}}</dd>
+            <dd>
+                {{hours}}
+                </dd>
             <dt>Location</dt>
             <dd><a href="/locations/{{Location_details._id}}">{{Location_details.name}}</a></dd>
             {{#if Location_details.rooms}}
