--- a/views/pages/departments.handlebars
+++ b/views/pages/departments.handlebars
@@ -1,8 +1,12 @@
-<section>
-  <h1>Departments</h1>
+
+<form>
   
-  <div id="department-results">
-    <div id="container">
+</form>
+
+<section class="container">
+  <h1>Departments</h1>
+  <div id="department-results" class="container align-items-center">
+    <div id="department-container">
     </div>
     <div id="pagination"></div>
   </div>
