--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -23,17 +23,18 @@
           type="email"
           placeholder="mystevens@stevens.edu"
         />
-        <br />
+        <br>
         <label for="login_password">Password</label>
-        <br />
+        <br>
         <input
           class="form-input"
           id="login_password"
           name="login_password"
           type="password"
           placeholder="Password"
+          required
         />
-        <br />
+        <br>
         <button class="submit-button" type="submit">Submit</button>
       </form>
       <div id="error-form" hidden></div>
