Added Admin Access to delete a location

--- a/views/pages/createLocation.handlebars
+++ b/views/pages/createLocation.handlebars
@@ -1,4 +1,4 @@
-<form action="/locations/create" id="location-create-form" method="POST">
+<form action="/locations" id="location-create-form" method="POST">
     <label for="location_name">Name</label>
     <br>
     <input class="form-input" id="location_name" name="location_name" type="text" placeholder="Name" value={{location_name}}>
