--- a/views/pages/locations.handlebars
+++ b/views/pages/locations.handlebars
@@ -16,7 +16,12 @@
         <a href="/locations/{{_id}}">{{name}}</a>
         {{#if @root.isAdmin}}
           <br />
-          <a href="/locations/delete" method="Delete">Delete!</a>
+          <form id="delete-form" method="POST" action="/locations/{{_id}}">
+            <button type="submit">Delete</button>
+          </form>
+          <form id="edit-form" method="PUT" action="/locations/{{_id}}">
+            <button type="submit">Edit</button>
+          </form>
         {{/if}}
         <hr />
       </li>
