--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,10 +4,16 @@
 
 main {
   padding: 20px;
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 body {
   background-color: rgb(238, 238, 238);
+  min-height: 100%;
 }
 nav {
   background: #9e9e9e;
@@ -34,6 +40,7 @@ main {
 .form-inner {
   width: 60%;
   border: 2px solid black;
+  background-color: #fff;
   border-radius: 2px;
   padding: 10px;
   text-align: center;
@@ -41,6 +48,11 @@ main {
 
 .form-inner form > * + * {
   margin-top: 0.2em;
+}
+
+.fill {
+  min-height: 100%;
+  height: 100%;
 }
 
 .flex-container {
@@ -51,6 +63,7 @@ main {
 
 .flex-child {
   flex: 1;
+  padding: 0.5em;
 }
 
 .center {
