--- a/views/pages/departments.handlebars
+++ b/views/pages/departments.handlebars
@@ -1,6 +1,7 @@
 
 <section class="container">
   <h1>Departments</h1>
+  <p>Department List</p>
   <div id="department-results" class="container align-items-center">
     <div id="department-container">
     </div>
