--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>CampusCompass</h1>
 <div class="flex-container">
   <div class="flex-child">
@@ -45,5 +46,5 @@
     </div>
   </div>
 </div>
-
+</div>
 <script src="/public/js/login.js"></script>
