--- a/views/pages/signup.handlebars
+++ b/views/pages/signup.handlebars
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>CampusCompass</h1>
 <div class="flex-container">
     <div class="flex-child">
@@ -46,5 +47,6 @@
         <a href="/login"> Click Here to Login!</a>
         {{/if}}
     </div>
+</div>
 </div>
 <script src="/public/js/signup.js"></script>
