Added Admin Access to edit a location

--- a/views/pages/createLocation.handlebars
+++ b/views/pages/createLocation.handlebars
@@ -17,7 +17,7 @@
 
     <label for="operating_hours">Operating Hours</label>
     <br>
-    <input class="form-input" id="operating_hours" name="operating_hours" type="text" placeholder="[hh:mm:ss, hh:mm:ss]">
+    <input class="form-input" id="operating_hours" name="operating_hours" type="text" placeholder="[&quot;hh:mm:ss&quot;, &quot;hh:mm:ss&quot;]">
     <br>
 
     <label for="location">Location Coordinates</label>
