--- a/views/pages/feedback.handlebars
+++ b/views/pages/feedback.handlebars
@@ -3,26 +3,39 @@
   <div id="feedback-success" hidden><p>Feedback reported successfully!</p></div>
   <div id="error" class="error" hidden><div class="error-text"></div></div>
   <form action="/feedback" method="POST" id="feedback-form">
-     <div>
       {{#if id}}
-      <input type="text" id="user_id" name="user_id" readonly value="{{ id }}" hidden>
+      <input type="text" id="reported_by" name="reported_by" readonly value="{{ id }}" hidden>
        {{/if}}
-    </div>
-    <div>
+    <br>
       <label for="event_type">Event type: </label>
       <select id="event_type" onclick="events()">
         <option value="departments">Departments</option>
         <option value="locations">Locations</option>
         <option value="events">Events</option>
       </select>
-    </div>
-    <div>
-      <label for="event_list">Event: </label>
-      <select id="event_list">
-      </select>
-    </div>
+    <br>
+      <label for="event_list">Event: 
+        <select id="events_list" name = "reported_object" hidden>
+          {{#each events}}
+          <option value="{{ this._id }}">{{this.name}}</option>
+          {{/each}}
+        </select>
+        <select id="department_list" name = "reported_object" hidden>
+          {{#each departments}}
+          <option value="{{ this._id }}">{{this.name}}</option>
+          {{/each}}
+        </select>
+        <select id="locations_list" name = "reported_object" hidden>
+          {{#each locations}}
+          <option value="{{ this._id }}">{{this.name}}</option>
+          {{/each}}
+        </select>
+      </label>
+
+      <br>
     <label for="feedback_description">Your Feedback: </label>
 	<textarea id="feedback_description" name="feedback_description"></textarea>
+  <br>
     <button class="submit-button" type="submit">Submit</button>
   </form>
 </section>
