--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,20 @@ html {
   height: 100%;
 }
 
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a {
+  flex-grow: 1;
+}
+
+button {
+  margin-left: 10px;
+}
+
 body {
   background-color: rgb(238, 238, 238);
   min-height: 100%;
@@ -60,7 +74,6 @@ main {
   border: none;
 }
 
-
 .flex-child {
   flex: 1;
   padding: 0.5em;
@@ -100,11 +113,11 @@ main {
 }
 
 .Open {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 4px;
-    border-radius: 2px;
-    width: 10%;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 4px;
+  border-radius: 2px;
+  width: 10%;
 }
 .Closed {
   background-color: #a32638;
@@ -141,31 +154,29 @@ footer {
   margin-top: 0.2em;
 }
 
-
 #pagination {
-    display: inline-block;
-    margin-top: 0.8rem;
+  display: inline-block;
+  margin-top: 0.8rem;
 }
 
 #pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
 #pagination a.active {
-    background-color: #4CAF50;
-    color: white;
+  background-color: #4caf50;
+  color: white;
 }
 
-
 .cards {
-    padding: 10px 15px;
-    border-radius: 2px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin-top: 0.5em;
-    background-color: #fff;
+  padding: 10px 15px;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 0.5em;
+  background-color: #fff;
 }
 
 dl {
@@ -182,4 +193,37 @@ dd {
   overflow: auto;
   margin: 0 0 0 10px;
   padding: 0 0 0.1em 0;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  width: 30%;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-header {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+
+.card-body {
+  padding: 10px;
+}
+
+.card-footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
 }
