--- a/views/pages/location.handlebars
+++ b/views/pages/location.handlebars
@@ -4,9 +4,11 @@
   <p>Building type: {{data.type}}</p>
   <p>Operating Hours: {{data.operating_hours}}</p>
 
-  {{#if isAdmin}}
-    <a href="/locations/{{data._id}}/create">Create a New Room</a>
-  {{/if}}
+  {{!-- {{#if isAdmin}}
+    <form id="create-form" method="GET" action="/rooms/create">
+      <button type="submit" class="btn btn-sm btn-primary">Create a New Room</button>
+    </form>
+  {{/if}} --}}
   <form action="/locations/{{data._id}}" method="GET">
     <input type="text" name="key" placeholder="Search..." />
     <button type="submit">Search</button>
@@ -16,12 +18,38 @@
     <a href="/locations">Back to all Locations</a>
   {{/if}}
 
-  {{#each rooms}}
-    <hr />
-    <p>Room Number: {{room_number}}</p>
-    <p>Capacity: {{capacity}}</p>
-    <p>Floor Number: {{floor_number}}</p>
-    <p>Room Type: {{type}}</p>
-  {{/each}}
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      {{#each rooms}}
+        <div class="card col-md-4 my-2">
+          <div class="card-body">
+            <p>Room Number: {{room_number}}</p>
+            <p>Capacity: {{capacity}}</p>
+            <p>Floor Number: {{floor_number}}</p>
+            <p>Room Type: {{type}}</p>
+            {{!-- {{#if @root.isAdmin}}
+              <br />
+              <form id="delete-form" method="POST" action="/locations/{{_id}}">
+                <button
+                  type="submit"
+                  class="btn btn-sm btn-outline-danger"
+                >Delete</button>
+              </form>
+              <form
+                id="edit-form"
+                method="GET"
+                action="/locations/edit/{{_id}}"
+              >
+                <button
+                  type="submit"
+                  class="btn btn-sm btn-outline-dark"
+                >Edit</button>
+              </form>
+            {{/if}} --}}
+          </div>
+        </div>
+      {{/each}}
+    </div>
+  </div>
   <a href="/locations">Back to all locations</a>
 </main>
