--- a/views/pages/locations.handlebars
+++ b/views/pages/locations.handlebars
@@ -1,11 +1,10 @@
 <main>
-  {{#if isAdmin}}
-    <a href="/locations/create">Create a New Location</a>
-  {{/if}}
+  <h1>{{title}}</h1>
   <form action="/locations" method="GET">
     <input type="text" name="key" placeholder="Search..." />
     <button type="submit">Search</button>
   </form>
+  <hr />
   {{#if key}}
     <h3>Results for "{{key}}"</h3>
     <a href="/locations">Back to all Locations</a>
@@ -17,14 +16,25 @@
         {{#if @root.isAdmin}}
           <br />
           <form id="delete-form" method="POST" action="/locations/{{_id}}">
-            <button type="submit">Delete</button>
+            <button
+              type="submit"
+              class="btn btn-sm btn-outline-danger"
+            >Delete</button>
           </form>
           <form id="edit-form" method="GET" action="/locations/edit/{{_id}}">
-            <button type="submit">Edit</button>
+            <button
+              type="submit"
+              class="btn btn-sm btn-outline-dark"
+            >Edit</button>
           </form>
         {{/if}}
         <hr />
       </li>
     {{/each}}
   </ol>
+  {{#if isAdmin}}
+    <form id="create-form" method="GET" action="/locations/create">
+      <button type="submit" class="btn btn-sm btn-primary">Create a New Location</button>
+    </form>
+  {{/if}}
 </main>
