--- a/views/pages/events.handlebars
+++ b/views/pages/events.handlebars
@@ -1,6 +1,6 @@
-<section>
+{{!-- <section>
   <h1>Events</h1>
-  <form action="/events/search" method="POST" id="event-search">
+  <form action="/events/search" method="GET" id="event-search">
     <label for="search-bar">Search</label>
     <input
       id="search-bar"
@@ -12,4 +12,46 @@
   </form>
   <div id="event-results" hidden></div>
 </section>
+<script src="/public/js/events.js"></script>
+ --}}
+
+<main>
+  <h1>{{title}}</h1>
+  <form action="/events" method="GET">
+    <label for="search-bar">Search</label>
+    <input type="text" name="key" placeholder="Search..." />
+    <button class="submit" type="submit">Submit</button>
+  </form>
+  {{#if key}}
+    <h3>Results for "{{key}}"</h3>
+    <a href="/events">Back to all Events</a>
+  {{/if}}
+  <ol>
+    {{#each data}}
+      <li>
+        <a href="/events/{{_id}}">{{name}}</a>
+        {{#if @root.isAdmin}}
+          <br />
+          {{!-- <form id="delete-form" method="POST" action="/events/{{_id}}">
+            <button type="submit">Delete</button>
+          </form>
+          <form id="edit-form" method="GET" action="/events/edit/{{_id}}">
+            <button type="submit">Edit</button>
+          </form> --}}
+          {{#if ../isAdmin}}
+      <button class="edit" data-id="{{this._id}}">Edit</button>
+      <button class="delete" data-id="{{this._id}}">Delete</button>
+      {{/if}}
+        {{/if}}
+        <hr />
+      </li>
+    {{/each}}
+  </ol>
+
+  {{#if isAdmin}}
+    <form id="create-form" method="GET" action="/events/create">
+      <button type="submit" class="btn btn-sm btn-primary">Create a New Event</button>
+    </form>
+  {{/if}}
+</main>
 <script src="/public/js/events.js"></script>
