--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,7 +65,6 @@ main {
 }
 
 .form-create {
-  width: 80%;
   padding: 10px;
 }
 
@@ -93,7 +92,15 @@ main {
   justify-content: center;
   align-items: center;
 }
-
+.cards-container {
+  height: 70vh;
+    overflow: auto;
+}
+#form-search{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .submit-button {
   background-color: #555555;
   color: #fff;
