--- a/views/partials/map.handlebars
+++ b/views/partials/map.handlebars
@@ -8,10 +8,7 @@
 
   const map = L.map('map').setView([40.745451, -74.025504], 16); const
   pointLayer = L.geoJSON([{{{geoObject}}}]).addTo(map)
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  attribution: 'Map data &copy; <a
-  href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a
-  href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>', maxZoom:
-  19, }).addTo(map);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 
+  {attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>', maxZoom:19, }).addTo(map);
 
 </script>
