--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,7 @@ button {
 body {
   background-color: rgb(238, 238, 238);
   min-height: 100%;
+  padding-bottom: 60px;
 }
 nav {
   background: #9e9e9e;
@@ -58,6 +59,7 @@ main {
   border-radius: 2px;
   padding: 10px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .form-inner form > * + * {
@@ -77,6 +79,7 @@ main {
 .flex-child {
   flex: 1;
   padding: 0.5em;
+  flex-basis: 50%;
 }
 
 .center {
@@ -108,8 +111,9 @@ main {
   box-sizing: border-box;
   border: 2px solid #15151568;
   outline: none;
-  padding: 10px 15px;
-  transition: 0.2s;
+  padding: 8px;
+  margin: 8px 0;
+  width: 100%;
 }
 
 .Open {
@@ -140,6 +144,10 @@ footer {
   background-color: #a32638;
   color: #fff;
   padding: 4px;
+  height: 60px; /* add height to footer */
+  display: flex; /* add display: flex */
+  align-items: center; /* add align-items: center */
+  justify-content: center;
 }
 
 .error {
@@ -226,4 +234,20 @@ dd {
   background-color: #f1f1f1;
   padding: 10px;
   text-align: center;
+}
+
+/* Media queries for smaller screens */
+
+@media screen and (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .flex-child {
+    flex-basis: 100%;
+  }
+
+  .form-inner {
+    max-width: 100%;
+  }
 }
