--- a/views/pages/createDepartment.handlebars
+++ b/views/pages/createDepartment.handlebars
@@ -68,7 +68,25 @@
 </form>
 
 <div id="error-form" hidden></div>
+</div>
 
+
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Depatment Alert</h2>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p id="msg"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 <script src="/public/js/departmentCreate.js"></script>
