--- a/views/partials/map.handlebars
+++ b/views/partials/map.handlebars
@@ -2,12 +2,17 @@
 <script
   src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
   integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-  crossorigin=""
-></script>
+  crossorigin=""></script>
 <script>
 
-  const map = L.map('map').setView([40.745451, -74.025504], 16); const
-  pointLayer = L.geoJSON([{{{geoObject}}}]).addTo(map)
+  const map = L.map('map')
+  console.log({{{ geoObject }}})
+   const pointLayer = L.geoJSON([{{{geoObject}}}], {
+      onEachFeature: function (feature, layer) {
+        layer.bindPopup('<p>' + feature.properties.popupContent + '</p>');
+      } } ).addTo(map)
+  map.fitBounds(pointLayer.getBounds());
+
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 
   {attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>', maxZoom:19, }).addTo(map);
 
