--- a/views/pages/feedback.handlebars
+++ b/views/pages/feedback.handlebars
@@ -1,6 +1,5 @@
 <section>
   <h1>Feedback</h1>
-  <div id="feedback-success" hidden><p>Feedback reported successfully!</p></div>
   <div id="error" class="error" hidden><div class="error-text"></div></div>
   <form action="/feedback" method="POST" id="feedback-form">
       {{#if id}}
@@ -9,34 +8,42 @@
     <br>
       <label for="event_type">Event type: </label>
       <select id="event_type" onclick="events()">
-        <option value="departments">Departments</option>
-        <option value="locations">Locations</option>
-        <option value="events">Events</option>
+        <option value="departments" >Departments</option>
+        <option value="locations" >Locations</option>
+        <option value="events" >Events</option>
       </select>
     <br>
       <label for="event_list">Event: 
-        <select id="events_list" name = "reported_object" hidden>
+        <select id ="event_list" name = "event_list">
+          <option value="#">Search Options</option>
+        </select>
+        <select id="events_list" name = "reported_object" onclick="events()" hidden>
+          <option value="#">Search Options</option>
           {{#each events}}
           <option value="{{ this._id }}">{{this.name}}</option>
           {{/each}}
         </select>
-        <select id="department_list" name = "reported_object" hidden>
+        <select id="department_list" name = "reported_object" onclick="events()" hidden>
+          <option value="#">Search Options</option>
           {{#each departments}}
           <option value="{{ this._id }}">{{this.name}}</option>
           {{/each}}
         </select>
-        <select id="locations_list" name = "reported_object" hidden>
+        <select id="locations_list" name = "reported_object" onclick="events()" hidden>
+          <option value="#">Search Options</option>
           {{#each locations}}
           <option value="{{ this._id }}">{{this.name}}</option>
           {{/each}}
         </select>
       </label>
-
       <br>
     <label for="feedback_description">Your Feedback: </label>
 	<textarea id="feedback_description" name="feedback_description"></textarea>
   <br>
     <button class="submit-button" type="submit">Submit</button>
+  {{#if success}}
+    <div id="feedback-success"><p>Thank you for your feedback!</p></div>
+  {{/if}}
   </form>
 </section>
 <script src = "/public/js/feedback.js"> </script>
