--- a/views/pages/search.handlebars
+++ b/views/pages/search.handlebars
@@ -3,23 +3,26 @@
     <h1>Search</h1>
     <p>Please Select options from below Drop down to filter out results</p>
 <form id="form-search" method="post" onsubmit="">
+    <div>
     <label for="search-type">Search Type</label>
-    <select name="search-type" id="search-type">
+    <select name="search-type" id="search-type" class="form-input">
         <option value="#">Search Options</option>
         <option value="department">Departments</option>
         <option value="location">Buildings</option>
-        <option value="room">Rooms</option>
+        {{!-- <option value="room">Rooms</option> --}}
     </select>
     <br>
+    </div>
     <div id="search-additional" hidden>
         <label for="search-type-additional">Type</label>
-        <select name="search-type-additional" class="input-field" id="search-type-additional">
+        <select name="search-type-additional" class="form-input" id="search-type-additional">
             <option value="#">Select Type</option>
         </select>
     </div>
-    <label for="search-string" id="search-string-label" hidden>Search String</label>
-    <input type="text" class="input-field" id="search-string" placeholder="Enter Search Text" hidden>    
-    {{!-- <input type="submit" value="Submit"> --}}
+    <div id="search-string-div" hidden>
+    <label for="search-string" id="search-string-label">Search String</label>
+    <input type="text" class="form-input" id="search-string" placeholder="Enter Search Text">    
+    </div>
 </form>
 <div id="results" class="container" hidden></div>
 </div>
