--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -7,7 +7,7 @@
       <li><a class="btn" href="/locations">Locations</a></li>
       <li><a class="btn" href="/events">Events</a></li>
       <li><a class="btn" href="/feedback">Feedback</a></li>
-      <li><a class="btn" href="/logout">logout</a></li>
+      <li><a class="btn" href="/logout">Logout</a></li>
     </ul>
   </nav>
 </header>
