--- a/views/pages/feedback.handlebars
+++ b/views/pages/feedback.handlebars
@@ -40,7 +40,7 @@
     <label for="feedback_description">Your Feedback: </label>
 	<textarea id="feedback_description" name="feedback_description"></textarea>
   <br>
-    <button class="submit-button" type="submit">Submit</button>
+    <button class="submit-button" type="submit" onclick="submitfeedback()">Submit</button>
   {{#if success}}
     <div id="feedback-success"><p>Thank you for your feedback!</p></div>
   {{/if}}
