--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
 		{{{body}}}
 	</main>
     {{#if logedin}}
-    {{>feedback }}
+    <a class="feedback-btn" href="/feedback">Feedback</a>
     {{/if}}
 	{{> footer}}
 
