--- a/views/pages/createDepartment.handlebars
+++ b/views/pages/createDepartment.handlebars
@@ -1,26 +1,36 @@
 <div class="container">
-    <h1>New Department Creation form</h1>
+    <h1>Department {{formname}} form</h1>
 <form class="form-create" id="department-create-form" method="POST">
     <p>* Required</p>
     <label for="department-name">Name*</label>
-    <input class="form-input" id="department-name" name="department-name" type="text" placeholder="Department Name">
+    <input class="form-input" id="department-name" name="department-name" type="text" placeholder="Department Name"
+    {{#if department}}
+    value="{{department.name}}"
+    {{/if}}
+    >
     <br>
 
     <label for="department-desc">Description</label>
     <br>
-    <textarea class="form-input" id="department-desc" name="department-desc" placeholder="Description"></textarea>
+    <textarea class="form-input" id="department-desc" name="department-desc" placeholder="Description">{{#if department}}{{department.desc}}{{/if}}</textarea>
     <br>
 
     <div class="flex-container">
         <div class="flex-child">
             <label for="department-hour-start">Open Time*</label>
             <br>
-            <input class="form-input" id="department-hour-start" name="department-hour-start" type="time" >
+            <input class="form-input" id="department-hour-start" name="department-hour-start" type="time" 
+            {{#if department}}
+                value="{{department.deparment-start}}"
+            {{/if}}
+            >
         </div>
         <div class="flex-child">
             <label for="department-hour-end">Closing Time*</label>
             <br>
-            <input class="form-input" id="department-hour-end" name="department-hour-end" type="time" >
+            <input class="form-input" id="department-hour-end" name="department-hour-end" type="time" {{#if department}}
+                value="{{department.deparment-start}}"
+            {{/if}} >
         </div>
         <div class="flex-child"><label for="department-type">Department Type*</label>
             <br>
@@ -77,7 +87,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">Depatment Alert</h2>
+                <h2 class="modal-title">Notification</h2>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
