--- a/views/pages/notifications.handlebars
+++ b/views/pages/notifications.handlebars
@@ -2,9 +2,9 @@
     <ol>
         {{#each notifications}}
         <li>
-        <a href="/notification/{{this._id}}">{{this.title}}</a>
+        <a href="/notifications/{{this._id}}">{{this.title}}</a>
         <br>
-        Descreption: {{this.event_type}}
+        Description: {{this.event_type}}
         </li>
        {{/each}}
     </ol>
