--- a/views/pages/createLocation.handlebars
+++ b/views/pages/createLocation.handlebars
@@ -7,6 +7,7 @@
     name="location_name"
     type="text"
     placeholder="Name"
+    value="{{data.location_name}}"
   />
   <br />
 
@@ -18,6 +19,7 @@
     name="location_desc"
     type="text"
     placeholder="Description"
+    value="{{data.location_desc}}"
   />
   <br />
 
@@ -29,6 +31,7 @@
     name="location_type"
     type="text"
     placeholder="Type of this Location"
+    value="{{data.location_type}}"
   />
   <br />
 
@@ -42,6 +45,7 @@
     min="00:00:00"
     max="23:59:59"
     step="1"
+    value="{{data.opening_hours}}"
   />
   {{! placeholder="[&quot;hh:mm:ss&quot;, &quot;hh:mm:ss&quot;]" }}
   <br />
@@ -56,6 +60,7 @@
     min="00:00:00"
     max="23:59:59"
     step="1"
+    value="{{data.closing_hours}}"
   />
   <br />
 
@@ -67,15 +72,21 @@
     name="location"
     type="text"
     placeholder="GeoJson of Location"
+    value="{{data.location}}"
   />
   <br />
 
   <div id="entrances-container"></div>
   <button type="button" id="add-entrance">Add Entrance</button>
+
   <input type="submit" class="submit-button" value="Create" />
   <br />
   <a href="/locations" class="btn btn-info">Back to all locations</a>
 </form>
+
+{{#if error}}
+  <p class="error">{{{error}}}</p>
+{{/if}}
 
 <script>
   const entrancesContainer = document.querySelector('#entrances-container');
