--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,10 @@
 		{{{body}}}
 	</main>
     {{#if logedin}}
-    <a class="feedback-btn" href="/feedback">Feedback</a>
+    <a class="feedback-btn" href="/feedback">
+    {{!-- <img src="/public/img/chat-right-text-fill.svg" alt="Feedback"></img> --}}
+    <span>Feedback</span>
+    </a>
     {{/if}}
 	{{> footer}}
 
