--- a/views/pages/login.handlebars
+++ b/views/pages/login.handlebars
@@ -1,11 +1,11 @@
-<div class="container">
-<h1>CampusCompass</h1>
+<div class="container-fluid">
+
 <div class="flex-container">
   <div class="flex-child">
-    <h2>Welcome</h2>
-    <p>This is CampusCompass - an online site to help users notify of their
+    <h1>CampusCompass</h1>
+    <p>Welcome to CampusCompass - an online site to help users notify of their
       current lectures and display all event occuring on campus</p>
-    <p>Description for page</p>
+    <p>Login to browse through application!</p>
   </div>
   <div class="flex-child center">
     <div class="form-inner">
