--- a/views/pages/locations.handlebars
+++ b/views/pages/locations.handlebars
@@ -12,6 +12,16 @@
   <a href="/locations">Back to all Locations</a>
 {{/if}}
 <div class="container">
+{{#if isAdmin}}
+  <div class="cards">
+    <div class="cards-inner">
+      <a href="/locations/create">
+        <img src="/public/img/plus-circle.svg" alt="Create new Department">
+        <span>Create New Location</span>
+      </a>
+    </div>
+  </div>
+{{/if}}
   {{#each data}}
     <div class="cards">
       <h2><a href="/locations/{{_id}}">{{name}}</a></h2>
@@ -41,8 +51,7 @@
 
   {{/each}}
 </div>
-{{#if isAdmin}}
+{{!-- 
   <form id="create-form" method="GET" action="/locations/create">
     <button type="submit" class="btn btn-sm btn-primary">Create a New Location</button>
-  </form>
-{{/if}}
+  </form> --}}
